src/webapp/fluid-components/css/Uploader.css
/* styles used for testing and development
 * TODO: should be moved to tool css for image gallery
 */

.fluid-uploader { 
    width: 434px;
    position: relative;
}

.fluid-uploader form {
    height: auto !important;
}

.fluid-uploader a.fluid-uploader-browse {
    background-image: url(../images/uploader/add.png);
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-position: 4px 3px;
    padding: 3px 6px 3px 25px;
    border: 1px solid transparent;
    white-space: nowrap;
    color: #427ABE;
    font-weight: normal;
    cursor: pointer;
}

.fluid-uploader a.fluid-uploader-browse:hover {
    border: 1px solid #CCC;
    background-color: #FFF;
}

.fluid-uploader a.fluid-uploader-browse:focus {
    border: 2px solid #142B8C;
    background-color: #FFF;
}

/* FILE QUEUE TABLE STYLES */

.fluid-uploader-queue-wrapper {
    width: 100%;
    border-bottom: 1px solid #999;
}

.fluid-uploader-queue-wrapper table {
    width: 100%;
}

/* caption */

.fluid-uploader-queue-wrapper caption {
    font-weight: bolder;
    text-align: left;
    margin: 1em 0;
}

/* header rows */

.fluid-scroller-table-head {
    background-color: transparent;
    border-bottom: 1px solid #999;
    color: #666;
}

.fluid-scroller-table-head th { 
    text-align: left;
    font-size: 0.94em;
    font-weight: normal;
    padding: 6px;
}

/* footer rows */

.fluid-scroller-table-foot {
    position: relative;
    background-color: #E6E6E6;
    border-top: 1px solid #999;
    border-right: 1px solid #999;
    border-left: 1px solid #999;
}

.fluid-scroller-table-foot table { 
    position:relative;
    z-index:6;
}

.fluid-scroller-table-foot td {
    padding: 8px 6px;
    vertical-align: middle;
    font-size: 1.07em;
    font-weight: bolder;
    color: #666;
}

.fluid-scroller-table-foot td.footer-button {
    text-align: right;
}


/* tbody */

.fluid-scroller {
    display: block;
    position: relative;
    background-color: white;
    overflow: auto;
    overflow-x: hidden;
    overflow-y: auto;
    border-right: 1px solid #999;
    border-left: 1px solid #999;
}

.fluid-scroller thead {
    display: none;
}

.fluid-scroller .scroller-inner {
    position: relative;
    overflow: hidden;
}
        
.fluid-uploader-queue {
    position: relative;
    width: 465px;
    font-size: 0.9em;
    color: #333;
    z-index: 6;
}

.fluid-uploader-queue tr {
    background-color: transparent;
}

.fluid-uploader-queue tr.hover {
    background-color: #FBFFDC;
}

.fluid-uploader-queue tr:focus {
    background-color: #FFF;
}

.fluid-uploader-queue tr:focus td, .fluid-uploader-queue tr:focus th {
    border-top: 2px solid blue;
    border-bottom: 2px solid blue;
    padding: 2px 4px;
}

.fluid-uploader-queue tr:focus td:last-child {
    border-right: 2px solid blue;
}

.fluid-uploader-queue tr:focus th {
    border-left: 2px solid blue;
}

.fluid-uploader-queue tr.dim {
    color: #666;
}

.fluid-uploader-queue td, .fluid-uploader-queue th { 
    text-align: left;
    padding: 3px 6px;
    border-top: 1px solid #BBCFDC;
}

.fluid-uploader-queue tr:first-child td, .fluid-uploader-queue tr:first-child th { 
    border-top: none;
}

.fluid-uploader-queue-wrapper .fileName {
    width: 322px;
    overflow: hidden;
}

.fluid-uploader-queue-wrapper .fileSize {
    text-align: right;
    width: 4em;
    white-space: nowrap;
}

.fluid-uploader-queue .removeFile {
    border: 1px solid transparent;
    height: 20px;
    width: 20px;
    overflow: hidden;
    background-color: transparent;
    background-image: url(../images/uploader/remove.png);
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-position: 1px 1px;
    outline: 0;
    padding: 0;
    margin: 0;
    cursor: pointer;
    outline: none;
}

.fluid-uploader-queue .removeFile:hover {
    border: 1px solid #CCC;
    background-color: #FFF;
}

.fluid-uploader-queue .removeFile:focus {
    background-color: #4F99D3;
    outline: none;
}

.fluid-uploader-queue .uploaded th {
    border-left: 4px solid #74B74A;
}

.fluid-uploader-queue .uploaded .removeFile {
    background-image: url(../images/uploader/tick.png);
    cursor: auto;
}

.fluid-uploader-queue .uploaded .removeFile:hover, .fluid-uploader-queue .uploaded .removeFile:focus {
    cursor: auto;
    background-image: url(../images/uploader/tick.png);
    border: 1px solid transparent;
    background-color: transparent;
}


.fluid-uploader-queue .error th {
    border-left: 4px solid #F5E392;
}

.fluid-uploader-queue .error .removeFile {
    background-image: url(../images/uploader/error.png);
}

.fluid-uploader-queue .error .removeFile:hover, .fluid-uploader-queue .error .removeFile:focus {
    cursor: pointer;
    background-image: url(../images/uploader/error.png);
    border: 1px solid transparent;
    background-color: transparent;
}

.fluid-uploader-queue-wrapper td.fileRemove, .fluid-uploader-queue-wrapper th.fileRemove {
    text-align: center;
}

.fluid-uploader-queue td.fileRemove, .fluid-uploader-queue td.fileStatus { 
    white-space: nowrap;
}

.fluid-uploader-queue-wrapper .fluid-uploader-row-placeholder {
    background-color: #F0F9FF;
    color: #666;
    text-align: center;
    border-left: 1px solid #999;
    border-right: 1px solid #999;
    padding: 6px;
}

.fluid-uploader-btns {
    margin-top: 1em;
}

.fluid-uploader-btns .fluid-uploader-upload, .fluid-uploader-btns .fluid-uploader-resume,  .fluid-uploader-btns .fluid-uploader-pause {
    width: 8.4em;
}

.fluid-uploader-btns .fluid-uploader-done, .fluid-uploader-btns .fluid-uploader-cancel {
    width: 7.6em;
}

.fluid-uploader-btns .fluid-uploader-pause {
    padding-right: 1em;
    background-image: url('../images/uploader/pause.png');	
    background-position: 74% center;
    background-repeat: no-repeat;
}

.fluid-uploader-btns button {
    display: none;
    float: right;
    padding-left: 0;
    padding-right: 0;
}

.fluid-uploader-btns button:focus {
    border-width: 3px;
    border-color: #142B8C;
}

/* STATES
 * start - initial state of the uploader, no rows, or all rows removed
 * browsing - the OS dialog is being displayed or we're still updating the queue with new files
 * loaded - files in the queue, but the Upload button has not been clicked
 * uploading - we're in the process of uploading
 * pause - some files uploaded, some still in the queue
 * reloaded - some files uploaded, new files in the queue
 * empty - some files uploaded, no files in the queue
 * done - all files have been uploaded
 */

.fluid-uploader .fluid-uploader-row-placeholder {
    display: none;
}

/* start */

.fluid-uploader .start .fluid-uploader-row-placeholder {
    display: block;
}

.start .fluid-uploader-btns .fluid-uploader-cancel {
    display: block;
}

.start .fluid-uploader-btns .fluid-uploader-upload, 
  .start .fluid-uploader-btns .fluid-uploader-upload:hover {
    display: block;
    background-color: #CCC !important;
    border-color: #999 !important;
    cursor: auto;
}

/* loaded */

.loaded .fluid-uploader-btns .fluid-uploader-upload {
    display: block;
}

.loaded .fluid-uploader-btns .fluid-uploader-cancel {
    display: block;
}

/* uploading */

.uploading .fluid-uploader-btns .fluid-uploader-pause {
    display: block;
}

.uploading .fluid-uploader-btns .fluid-uploader-done,
  .uploading .fluid-uploader-btns .fluid-uploader-done:hover {
    display: block;
    background-color: #CCC !important;
    border-color: #999 !important;
    cursor: auto;
}

.uploading .fluid-uploader-queue .removeFile {
    background-image: url(../images/uploader/remove-dim.png);
}

.uploading .fluid-uploader-queue .uploaded .removeFile {
    background-image: url(../images/uploader/tick.png);
}

.uploading .fluid-uploader-queue .error .removeFile {
    background-image: url(../images/uploader/error.png);
}

.fluid-uploader .uploading a.fluid-uploader-browse {
    background-image: url(../images/uploader/add-dim.png);
    color: #7EA7DD;
    cursor: auto;
}

.fluid-uploader .uploading a.fluid-uploader-browse:hover {
    border: 1px solid transparent;
    background-color: transparent;
}

.fluid-uploader .uploading a.fluid-uploader-browse:focus {
    border: 1px solid transparent;
    background-color: transparent;
}


/* paused */

.paused .fluid-uploader-btns .fluid-uploader-resume {
    display: block;
}

.paused .fluid-uploader-btns .fluid-uploader-done {
    display: block;
}

/* empty */

.empty .fluid-uploader-btns .fluid-uploader-done {
    display: block;
}

.empty .fluid-uploader-btns .fluid-uploader-resume, 
  .empty .fluid-uploader-btns .fluid-uploader-resume:hover {
    display: block;
    background-color: #CCC !important;
    border-color: #999 !important;
    cursor: auto;
}

/* reloaded */

.reloaded .fluid-uploader-btns .fluid-uploader-resume {
    display: block;
}

.reloaded .fluid-uploader-btns .fluid-uploader-done {
    display: block;
}

/* done */

.done .fluid-uploader-btns .fluid-uploader-resume,
  .done .fluid-uploader-btns .fluid-uploader-resume:hover {
    display: block;
    background-color: #CCC !important;
    border-color: #999 !important;
    cursor: auto;
}

.done .fluid-uploader-btns .fluid-uploader-done {
    display: block;
}

/* browsing 
 * all buttons are dimmed
 */ 

.fluid-uploader .browsing button,
  .fluid-uploader .browsing button:hover {
    background-color: #CCC !important;
    border-color: #999 !important;
    cursor: auto;
}

.fluid-uploader .browsing button.removeFile,
  .fluid-uploader .browsing button.removeFile:hover {
    background-color: transparent !important;
    border-color: transparent !important;
    cursor: auto;
}

/* ERRORS
 * 
 */

.fluid-uploader-queue .queue-error-row td {
    border-top: 1px dotted #E6E6E6;
    border-left: 4px solid #F5E392;
}


/* PROGRESS */

.file-progress, .total-progress {
    display: none;
    background-attachment: scroll;
    background-position: bottom left;
    background-repeat: repeat-x;
    overflow: hidden;
    left: 0;
    position: absolute;
    z-index:4;
}

.file-progress {
    background-image: url('../images/progress/gradient-file.png');
    background-color: #D1D6DD;
    width:76%;
}

.file-progress .file-progress-text {
    display: none;
}

.total-progress {
    top: 0;
    height: 100%;
    background-image: url('../images/progress/gradient-total.png');
    background-color: #BDBFC1;
    width:76%;
}


/* MASK */

.progress-mask {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 300;
    overflow: visible;
}

.progress-mask-top, .progress-mask-btm {
    position: relative;
    width: 100%;
    left: 0;
}

.progress-mask-top {
    height: 14px;
    background: url(../images/progress/rounded_overlay_top.png) no-repeat top;
}

.progress-mask-btm {
    background-image: url(../images/progress/rounded_overlay_btm.png); 
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-position: bottom;
    height: 100%;
}

/* extracted from style tag */

.add-btn {
    background: url(../images/add.png) no-repeat 3px 2px;
    padding: 2px 2px 1px 21px;
    font-size: 12px;
    cursor: hand;
}

caption {
    display: none;
}

#single-popup-fluid-uploader {
    display: none;
}


.myAddButton {
    background-color:#EBEBEB;
    border:1px solid #CCCCCC;
    padding:2px 5px;	
}

